# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  gcd.py  prime.py
brain_games/scripts/: .brain_games.py.swp  brain_calc.py  brain_calc_script.py  brain_even.py  brain_even_script.py  brain_game_script.py  brain_games.py  brain_gcd.py  brain_gcd_script.py  brain_prime.py  brain_prime_script.py  brain_progression.py  brain_progression_script.py  script_brain_games.py
